--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,700&display=swap');
+body,
+html {
+	@apply bg-indigo-600;
+	font-family: 'Poppins', sans-serif;
+}
+
+.container {
+	min-height: 90vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: url('./images/bg-blob.png');
+	background-size: contain;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-position: center;
+	margin: auto;
+	background-attachment: fixed;
+}
